# django-preact-starter

./: .gitignore  LICENSE  README.md  package.json  pyproject.toml  tasks.sh  tsconfig.json
client/src/: app.ts  index.tsx  models.ts  routes.tsx  store.ts
client/src/api/: example.ts  index.ts
client/src/components/: App.tsx
client/src/components/views/: Error.tsx  Home.tsx
client/src/types/: mobx-preact.d.ts
docker/: Dockerfile.django  Dockerfile.nginx  Dockerfile.parcel  dev.env  docker-compose.dev.yml  docker-compose.prod.yml
nginx/: nginx.conf
server/: wait_for_postgres.py
server/app/: admin.py  models.py  serializers.py  views.py
server/app/migrations/: 0001_initial.py
server/app/templates/: index.html
server/config/: settings.py  urls.py
