[tool.poetry]
authors = ["Jesse <2302541+Kangaroux@users.noreply.github.com>"]
description = ""
name = "CHANGEME"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.1"
djangorestframework = "^3.11.1"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
black = "^20.8b1"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
